fix: expose company type as string
